--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,16 @@
+body {
+  background-color: rgb(134, 128, 128);
+}
+
 .Title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   margin-bottom: 20px;
+  color: rgb(63, 38, 87);
+}
+
+.Calculation {
+  margin-right: 15px;
 }
