--- a/src/ToDoForm/ToDoForm.module.css
+++ b/src/ToDoForm/ToDoForm.module.css
@@ -8,16 +8,20 @@
 }
 
 .Label {
+  max-width: 400px;
+
   display: flex;
   flex-direction: column;
+  /* align-self: center; */
   margin-bottom: 20px;
 }
 
 .Input {
-  max-width: 200px;
+  max-width: 400px;
   margin-top: 5px;
   padding: 5px;
   border: 1px solid #d8d8d8;
+  background-color: #bbb1be;
 }
 
 .Input:focus {
@@ -29,6 +33,8 @@
   padding: 5px 10px;
   background-color: transparent;
   border: 1px solid #d8d8d8;
+  /* color: aliceblue; */
+  background-color: rgb(216, 227, 243);
   border-radius: 4px;
   cursor: pointer;
   font-weight: 600;
