--- a/src/TodoList/TodoList.css
+++ b/src/TodoList/TodoList.css
@@ -25,7 +25,7 @@
   /* text-decoration: line-through; */
 }
 
-button {
+.Button_delete {
   display: flex;
   align-self: center;
   max-width: 90px;
@@ -38,8 +38,8 @@ button {
   font-weight: 600;
 }
 
-button:hover,
-button:focus {
+.Button_delete:hover,
+.Button_delete:focus {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   background-color: #8a2424;
   border: 1px solid transparent;
