--- a/src/TodoList/TodoList.css
+++ b/src/TodoList/TodoList.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
+  padding: 10px 20px;
   margin-top: 4px;
   border: 1px solid black;
   cursor: pointer;
