--- a/src/TodoList/TodoList.css
+++ b/src/TodoList/TodoList.css
@@ -8,9 +8,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 20px;
+  padding: 5px 10px;
   margin-top: 4px;
-  border: 1px solid black;
+  border: 1px solid rgb(55, 28, 90);
   cursor: pointer;
 }
 
